manifests/pods-pvc-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-test-1
  namespace: default
spec:
  containers:
  - name: volume-test-1
    image: nginx:stable-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: volv
      mountPath: /data
    ports:
    - containerPort: 80
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: local-path-pvc
---
apiVersion: v1
kind: Pod
metadata:
  name: volume-test-2
  namespace: default
spec:
  containers:
  - name: volume-test-2
    image: nginx:stable-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: volv
      mountPath: /data
    ports:
    - containerPort: 80
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: local-path-pvc
